# ebookgen

./: .gitignore  .pre-commit-config.yaml  PRD_FINAL.md  README.md  WBS.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: make_subset.py
src/api/: __init__.py  app.py  deps.py  schemas.py
src/api/routes/: __init__.py  books.py  jobs.py  output.py  ws.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  assembler.py  cover_handler.py  errors.py  finalizer.py  manifest.py  ocr.py  optimizer.py  pipeline.py  pipeline_types.py  validator.py
src/frontend/: index.html
src/frontend/css/: styles.css
src/frontend/js/: app.js
src/models/: __init__.py  database.py  schemas.py
src/services/: __init__.py  watcher_service.py
src/worker/: __init__.py  loop.py
tests/: conftest.py  test_smoke.py
tests/unit/: test_api_books.py  test_api_jobs.py  test_assembler.py  test_cli.py  test_cover_handler.py  test_database.py  test_finalizer.py  test_manifest.py  test_ocr.py  test_optimizer.py  test_pipeline.py  test_scheduler.py  test_validator.py  test_watcher.py  test_worker.py  test_ws.py
